<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RecorderActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <item
        android:id="@+id/more_action"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:orderInCategory="3"
        android:title="@string/more_action"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_more"
                android:title="@string/more_record"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_help"
                android:title="@string/menu_help"
                app:showAsAction="never" />

        </menu>
    </item>
    <item
        android:id="@+id/search_bar"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="2"
        android:title="@string/search_bar"
        app:showAsAction="ifRoom" />
    <item
        android:id = "@+id/submit_area"
        android:title="@string/submit_area"
        android:orderInCategory="1"
        android:icon="@drawable/ic_keyboard_arrow_down_white_24dp"
        app:showAsAction="ifRoom" >
    </item>
</menu>